<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@color/grayLight"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:layout_marginTop="@dimen/padding40"
            android:layout_gravity="center"
            android:src="@mipmap/thanku"
            android:layout_width="200dp"
            android:layout_height="250dp"
            >
        </ImageView>

        <TextView
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_below="@+id/img_logo"
            android:layout_marginTop="@dimen/padding20"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/say_thankyou"
            android:textColor="#A81D1A"
            android:textSize="@dimen/padding25"/>


        <TextView
            android:gravity="center"
            android:layout_marginRight="@dimen/padding20"
            android:layout_marginLeft="@dimen/padding20"
            android:layout_below="@+id/RR_bien"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one_slide"
            android:layout_marginTop="@dimen/padding30"
            android:textSize="@dimen/padding16"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_marginTop="@dimen/padding30"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:backgroundTint="#A81D1A"
                android:layout_margin="@dimen/padding5"
                android:layout_width="@dimen/padding12"
                android:layout_height="@dimen/padding12"
                android:background="@drawable/circle_green_solid"/>

            <TextView
                android:backgroundTint="#A81D1A"
                android:layout_margin="@dimen/padding5"
                android:layout_width="@dimen/padding12"
                android:layout_height="@dimen/padding12"
                android:background="@drawable/circle_green_solid"/>

            <TextView
                android:backgroundTint="#A81D1A"
                android:layout_margin="@dimen/padding5"
                android:layout_width="@dimen/padding12"
                android:layout_height="@dimen/padding12"
                android:background="@drawable/circle_green_solid"/>

            <TextView
                android:backgroundTint="#A81D1A"
                android:layout_margin="@dimen/padding5"
                android:layout_width="@dimen/padding12"
                android:layout_height="@dimen/padding12"
                android:background="@drawable/circle_green_solid"/>

        </LinearLayout>

    </LinearLayout>


    <RelativeLayout
        android:layout_marginRight="-10dp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:id="@+id/img_skip_three"
        android:background="@drawable/edt_skip"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="@dimen/_90sdp"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:textStyle="bold"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:layout_marginTop="@dimen/padding10"
            android:textSize="@dimen/_16sdp"
            android:textColor="@color/white" />

    </RelativeLayout>




</RelativeLayout>